# was-pywb

./: .gitattributes  .gitignore  .rubocop.yml  .rubocop_todo.yml  Capfile  Dockerfile  Gemfile  LICENSE  README.md  Rakefile  compose.yaml  docker-compose.yml
.autoupdate/: preupdate
.circleci/: config.yml
.github/: pull_request_template.md
config/: boot.rb  deploy.rb
config/deploy/: prod.rb  qa.rb  stage.rb
lib/: indexer.rb
nginx/: default.conf  nginx.conf
pywb/: config.yaml  ingest.py  pyproject.toml  requirements.txt  uwsgi.ini
pywb/static/css/: custom.css  playback.css  stanford-footer.css  stanford-header.css
pywb/templates/: banner.html  base.html  footer.html  frame_insert.html  head.html  header.html  index.html  search.html  stanford_header.html
spec/: indexer_spec.rb  spec_helper.rb  web_spec.rb
spec/fixtures/: bad_urls.txt  test.html  urls.txt
test-data/: access.aclj  apod.cdxj  stanford.cdxj
