[tool.poetry]
name = "was-pywb"
version = "0.1.0"
description = "Stanford's wayback machine"
authors = ["Michael J. Giarlo <mjgiarlo@stanford.edu>"]
license = "Apache 2.0"

# we are just using poetry to install dependencies
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
pywb = "^2.8.0"
uWSGI = "^2.0.20"
cdxj-indexer = "^1.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
