[project]
name = "was-pywb"
version = "0.1.0"
description = "Stanford's wayback machine"
authors = [
    {name = "Michael J. Giarlo", email = "mjgiarlo@stanford.edu"},
]
license = {text = "Apache 2.0"}
requires-python = ">=3.11.0, <3.12"
dependencies = [
    "pywb >=2.8.0, <3.0.0",
    "uWSGI >=2.0.20, <3.0.0",
    "cdxj-indexer >=1.4.5, <2.0.0",
]
package-mode = false
